style.less
/* ... */
body.responsive {
	#page-wrapper {
		max-width: 1080px;
		width: auto;
		overflow-x: hidden;
	}

	&.layout-full {
		#page-wrapper {
			max-width: 100%;
		}
	}

	&.layout-full #page-wrapper{
		.full-container {
			max-width: 1080px;
			margin-left: auto;
			margin-right: auto;
		}
	}
}

/* =Menu
----------------------------------------------- */

.main-navigation {
	margin: 0 -35px -25px -35px;
	background: #343538;
	font-size: 13px;

	ul {
		list-style: none;
		margin: 0;
		padding-left: 0;
		.clearfix();

		li {
			display:block;
			position: relative;
			float: left;

			&:hover > a {
				background: #00bcff;
				color: #FFFFFF;

				[class^="icon-"] {
					color: #FFFFFF;
				}
			}

			a {
				padding: 20px 35px;
				.box-sizing(border-box);

				&, & > * {
					.transition(0.4s);
				}
			}
		}

		/* Second level menu items */
		ul {
			.transition(0.35s);
			.box-shadow(~"0 1px 2px rgba(0,0,0,0.15)");

			background: #464646;
			visibility: hidden;
            opacity:0;
			pointer-events: none;

			position: absolute;
			top: 100%;
			left: 50%;
			z-index: 99999;
			margin-left: -100px;

			a {
				width: 200px;
				padding: 15px 20px;
			}

			li {
				position: relative;

				/* Hovering over 2nd level items */
				&:hover > a {
					background: #00bcff;
					color: #FFFFFF;
				}
			}

			/* Third Level Items */

			ul {
				left: 100%;
				top: 0;
				margin-left: 0;
			}
		}

		li:hover > ul {
			visibility: visible;
            opacity:1;
			pointer-events: auto;
		}
	}

	/* General menu link styling */
	a {
		display: block;
		text-decoration: none;
		color: #e2e2e2;
		font-weight: bold;
	}

	/* For when the menu becomes a sticky menu */
	&.sticky {
		.box-shadow(~"0 2px 1px rgba(0,0,0,0.15)");
	}

	/* Font awesome icons */
	[class^="icon-"] {
		display: inline-block;
		margin-right: 15px;
		font-size: 16px;
		line-height: 0.5em;
		color: #CCCCCC;
	}
}

.mobile-nav-frame {
	[class^="icon-"] {
		margin-right: 10px;
	}
}

#search-icon {
	float: right;
	position: relative;

	#search-icon-icon {
		cursor: pointer;
		height: 59px;
		width: 59px;
		background: url(./images/sprites/search.png) no-repeat;
		background-color: #303134;

		border-left: 1px solid #2e2f31;
		.transition(0.25s);

		&:hover {
			background: url(./images/sprites/search-white.png) no-repeat;
			background-color: #00bcff;
		}
	}

	@media screen and (-webkit-min-device-pixel-ratio: 2) {
		#search-icon-icon {
			background-image: url(./images/retina/search.png);
			background-size: 59px 59px;

			&:hover {
				background-image: url(./images/retina/search-white.png);
				background-size: 59px 59px;
			}
		}
	}

	.searchform {
		display: none;
		position: absolute;
		top: 100%;
		right: 0;
		width: 1080px;
		background: #2d2e31;
		z-index: 10;
		overflow-x: hidden;

		input[name=s]{
			color: #d1d1d1;
			font-size: 17px;
			font-weight: 200;
			.box-sizing(border-box);
			display: block;
			width: 100%;
			height: 42px;
			border: none;
			.rounded(0px);
			background: transparent;
			outline: none;
			padding: 0 15px;
		}
	}
}

/* =Archives
----------------------------------------------- */

article.sticky{
	/* Style a sticky post */
}

.page-title {
	color: #3b3b3b;
	margin-bottom: 20px;
	font-size: 20px;
	font-weight: 500;

	a {
		color: inherit;
		text-decoration: none;
		font-weight: bold;
	}
}

article.post ,
article.page{
	.clearfix();

	footer {
		float: left;
		width: 17.5%;

		.post-type-icon {
			width: 50px;
			height: 50px;
			background: #4f5355;
			.rounded(3px);
		}

		.tags {
			margin-top: 15px;
			line-height: 1em;
			a {
				display: inline-block;
				margin-right: 4px;
				background: #74787a;
				.rounded(2px);
				line-height: 1em;
				padding: 4px 5px;
				color: white;
				text-decoration: none;
				font-size: 10px;
				text-transform: uppercase;
				margin-bottom: 4px;
				.box-shadow(~"0 1px 1px rgba(0,0,0,0.2)");
				text-shadow: 0 1px 1px rgba(0,0,0,0.75);
			}
		}
	}

	.entry-header {
		.entry-thumbnail {

			img {
				display: block;
				width: 100%;
				height: auto;
			}

			a {
				display: block;
			}

			margin-bottom: 20px;
		}

		h1.entry-title {
			color: #3b3b3b;
			font-size: 20px;
			font-weight: 500;

			a {
				color: inherit;
				text-decoration: none;
				font-weight: bold;
			}
		}

		.entry-meta {
			color: #8f8f8f;
			font-size: 12px;

			a {
				font-weight: 500;
				color: #5e5e5e;
				text-decoration: none;
			}
		}

		margin-bottom: 20px;
	}

	margin-bottom: 40px;
	padding-bottom: 40px;
	border-bottom: 1px solid #EEEEEE;

	&:last-child {
		margin-bottom: 0;
		padding-bottom: 0;
		border-bottom: 0;
	}

	.more-link {
		float: right;
		text-decoration: none;
		padding: 4px 10px;
		.bordered(#d2d2d2, #c3c3c3, #9f9f9f, #c3c3c3);
		.gradient(#FFFFFF, #dfdfdf, #FFFFFF);
		.rounded(3px);
		font-size: 11px;
		font-weight: bold;
		color: #646464;

		.meta-nav {
			display: none;
		}

		.box-shadow(~"0 1px 1px rgba(0,0,0,0.125)");
	}

	.share-buttons {
		margin: 20px 0 0 0;
		padding: 15px 25px;
		background: #F5F5F5;
		border: 1px solid #E0E0E0;
		list-style: none;
		.clearfix();

		li {
			height: 20px;
			display: block;
			float: left;
		}
	}

	.entry-summary {
		p:last-child{
			margin-bottom: 0;
		}
	}

	.entry-categories {
		margin-top: 1.5em;
		color: #999999;
		font-size: 0.85em;

		a {
			color: #777777;
		}
	}
}

.post-navigation,
#image-navigation{
	margin-top: -20px;
	margin-bottom: 40px;
	.clearfix();

	a {
		text-decoration: none;
		padding: 6px 10px;
		.bordered(#d2d2d2, #c3c3c3, #9f9f9f, #c3c3c3);
		.gradient(#FFFFFF, #dfdfdf, #FFFFFF);
		.rounded(3px);
		font-size: 11px;
		font-weight: bold;
		color: #646464;

		.meta-nav {
			display: inline-block;
		}

		.box-shadow(~"0 1px 1px rgba(0,0,0,0.125)");

		&:hover {
			.bordered(#dadada, #cfcfcf, #a8a8a8, #cfcfcf);
			.gradient(#FFFFFF, #ebebeb, #FFFFFF);
		}
	}

	.nav-previous {
		.meta-nav {
			margin-right: 7px;
		}
	}

	.nav-next {
		.meta-nav {
			margin-left: 7px;
		}
	}
}
/* ... */

